@@ -121,6 +121,7 @@ const std::string_view DefaultSelectedObjects[] = {
     "openrct2.music.fairground2",
     "openrct2.music.ragtime2",
     "openrct2.music.prehistoric",
+    "openrct2.music.mystic",
 
     // Footpath surfaces
     "rct2.footpath_surface.tarmac",
